--- a/ssafemodal/public/index.html
+++ b/ssafemodal/public/index.html
@@ -11,8 +11,15 @@
     />
     <title>SSAFE Modal</title>
     <style>
+      @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+
+      .notosanskr * {
+        font-family: "Noto Sans KR", sans-serif;
+      }
+
       body {
         margin: 0;
+        font-family: "Noto Sans KR", sans-serif;
       }
     </style>
   </head>
